--- a/package.json
+++ b/package.json
@@ -6,13 +6,18 @@
     "dev": "vite --host",
     "build": "vite build",
     "serve": "vite preview",
-    "check": "svelte-check --tsconfig ./tsconfig.json"
+    "check": "svelte-check --tsconfig ./tsconfig.json",
+    "lint": "eslint src"
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^1.0.0-next.11",
     "@tsconfig/svelte": "^2.0.1",
+    "@typescript-eslint/eslint-plugin": "^5.3.1",
+    "@typescript-eslint/parser": "^5.3.1",
     "autoprefixer": "^10.3.7",
     "cssnano": "^5.0.8",
+    "eslint": "^8.2.0",
+    "eslint-plugin-svelte3": "^3.2.1",
     "node-sass": "^6.0.1",
     "postcss": "^8.3.9",
     "postcss-load-config": "^3.1.0",
