--- a/package.json
+++ b/package.json
@@ -21,14 +21,19 @@
     "node-sass": "^6.0.1",
     "postcss": "^8.3.9",
     "postcss-load-config": "^3.1.0",
+    "redux": "^4.1.2",
     "sass": "^1.43.4",
     "svelte": "^3.37.0",
     "svelte-add": "^2021.10.1-0.2",
     "svelte-check": "^2.1.0",
     "svelte-preprocess": "^4.9.8",
+    "svelte-redux-connect": "^1.2.1",
     "tailwindcss": "next",
     "tslib": "^2.2.0",
     "typescript": "^4.3.2",
     "vite": "^2.6.4"
+  },
+  "dependencies": {
+    "@reduxjs/toolkit": "^1.6.2"
   }
 }
