--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "@mdi/js": "^6.5.95",
     "@sveltejs/vite-plugin-svelte": "^1.0.0-next.11",
     "@tsconfig/svelte": "^2.0.1",
+    "@types/color": "^3.0.2",
     "@typescript-eslint/eslint-plugin": "^5.3.1",
     "@typescript-eslint/parser": "^5.3.1",
     "autoprefixer": "^10.3.7",
+    "color": "^4.1.0",
+    "colorjs": "^0.1.9",
     "cssnano": "^5.0.8",
     "eslint": "^8.2.0",
     "eslint-plugin-svelte3": "^3.2.1",
