--- a/package.json
+++ b/package.json
@@ -10,35 +10,35 @@
     "lint": "eslint src"
   },
   "devDependencies": {
-    "@mdi/font": "^6.5.95",
-    "@mdi/js": "^6.5.95",
-    "@sveltejs/vite-plugin-svelte": "^1.0.0-next.11",
-    "@tsconfig/svelte": "^2.0.1",
-    "@types/color": "^3.0.2",
-    "@typescript-eslint/eslint-plugin": "^5.3.1",
-    "@typescript-eslint/parser": "^5.3.1",
-    "autoprefixer": "^10.3.7",
-    "color": "^4.1.0",
+    "@mdi/font": "^7.1.96",
+    "@mdi/js": "^7.1.96",
+    "@sveltejs/vite-plugin-svelte": "^2.0.2",
+    "@tsconfig/svelte": "^3.0.0",
+    "@types/color": "^3.0.3",
+    "@typescript-eslint/eslint-plugin": "^5.46.1",
+    "@typescript-eslint/parser": "^5.46.1",
+    "autoprefixer": "^10.4.13",
+    "color": "^4.2.3",
     "colorjs": "^0.1.9",
-    "cssnano": "^5.0.8",
-    "eslint": "^8.2.0",
-    "eslint-plugin-svelte3": "^3.2.1",
-    "node-sass": "^6.0.1",
-    "postcss": "^8.3.9",
-    "postcss-load-config": "^3.1.0",
-    "redux": "^4.1.2",
-    "sass": "^1.43.4",
-    "svelte": "^3.37.0",
-    "svelte-add": "^2021.10.1-0.2",
-    "svelte-check": "^2.1.0",
-    "svelte-preprocess": "^4.9.8",
+    "cssnano": "^5.1.14",
+    "eslint": "^8.30.0",
+    "eslint-plugin-svelte3": "^4.0.0",
+    "node-sass": "^8.0.0",
+    "postcss": "^8.4.20",
+    "postcss-load-config": "^4.0.1",
+    "redux": "^4.2.0",
+    "sass": "^1.57.0",
+    "svelte": "^3.55.0",
+    "svelte-add": "^2022.12.0-9.0",
+    "svelte-check": "^2.10.2",
+    "svelte-preprocess": "^5.0.0",
     "svelte-redux-connect": "^1.2.1",
-    "tailwindcss": "next",
-    "tslib": "^2.2.0",
-    "typescript": "^4.3.2",
-    "vite": "^2.6.4"
+    "tailwindcss": "3.2.4",
+    "tslib": "^2.4.1",
+    "typescript": "^4.9.4",
+    "vite": "^4.0.2"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^1.6.2"
+    "@reduxjs/toolkit": "^1.9.1"
   }
 }
